# local-agent-core

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  tsconfig.json
go-device-agent/: Dockerfile  README.md  go.mod
go-device-agent/cmd/agent/: main.go
go-device-agent/pkg/executor/: executor.go
go-device-agent/pkg/gateway/: gateway.go
go-device-agent/pkg/intent/: intent.go
rust-agent-core/: Cargo.toml  Dockerfile  README.md
rust-agent-core/examples/: complete_workflow.rs
rust-agent-core/src/: error.rs  lib.rs  types.rs
rust-agent-core/src/habit/: mod.rs
rust-agent-core/src/intent/: mod.rs
rust-agent-core/src/llm/: mod.rs
rust-agent-core/src/memory/: mod.rs
rust-agent-core/src/planner/: mod.rs
rust-agent-core/src/policy/: mod.rs
rust-agent-core/src/voice/: mod.rs
src/: index.ts
src/__tests__/: agent.test.ts  context-store.test.ts  intent-parser.test.ts  permission-manager.test.ts
src/actions/: module.ts  permission-manager.ts
src/context/: store.ts
src/core/: agent.ts  intent-parser.ts  types.ts
src/examples/: action-delegation.ts  basic-agent.ts  custom-llm-provider.ts
src/llm/: mock-provider.ts  provider.ts
src/voice/: provider.ts
