[package]
name = "rust-agent-core"
version = "0.1.0"
edition = "2021"
authors = ["Local Agent Core Team"]
description = "Privacy-first local AI agent core - cognitive engine"
license = "MIT"

[dependencies]
# Database & persistence
rusqlite = { version = "0.32", features = ["bundled"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Async runtime (for future async operations)
tokio = { version = "1.0", features = ["full"], optional = true }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
async = ["tokio"]
